--- a/Capstone_Project_Report.ipynb
+++ b/Capstone_Project_Report.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "### Introduction\n",
     "\n",
-    "Following the Covid-19 crisis and the toll the quarantine took on the local economy, the city of Munich is evaluating its involvement in a non-profit delivery initiative that would allow the local restaurants that are currently not open to the public to operate and generate revenues. The home delivery service would be managed and physically run by a non-profit, state-funded company, relieving thus the restaurants from all management and delivery-related costs.\n",
+    "The scenario I have imagined as background for this analysis is that, following the Covid-19 crisis and the toll the quarantine took on the local economy, the city of Munich is evaluating its involvement in a non-profit delivery initiative that would allow the local restaurants that are currently not open to the public to operate and generate revenues. The home delivery service would be managed and physically run by a non-profit, state-funded company, relieving thus the restaurants from all management and delivery-related costs.\n",
     "\n",
     "Considered the entity of the investment, the city council wants to first roll-out the service to those neighborhoods where an economy of scale could be most efficiently applied, namely the areas with an high demand and an high supply, where ideally a large volume of orders can be handled through an efficient employment of limited resources. \n",
     "\n",
